--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
           </div>
         </div>
       </div>
-
+      <!--
       <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
         <div class="row">
           <div class="col-md-6 form-group">
@@ -773,16 +773,16 @@
           <div class="sent-message">Your message has been sent. Thank you!</div>
         </div>
         <div class="text-center"><button type="submit">Send Message</button></div>
-      </form>
+      </form>-->
 
     </div>
   </section><!-- End Contact Section -->
 
- <!----> <div class="credits">
-    <!-- All the links in the footer should remain intact. -->
-    <!-- You can delete the links only if you purchased the pro version. -->
-    <!-- Licensing information: https://bootstrapmade.com/license/ -->
-    <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
+ <!--<div class="credits">
+     All the links in the footer should remain intact. 
+     You can delete the links only if you purchased the pro version. 
+    Licensing information: https://bootstrapmade.com/license/ 
+    Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
     <!--Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
   </div>-->
 
