--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Iam a Developer</h3>
           <p class="fst-italic">
-            Iam Ritik Verma Student of Dronacharya College of Engineering.
+            Iam Ritik Verma undergraduate student of Dronacharya College of Engineering. Pursuing Bachelor's of Technology in Computer science. 
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -108,8 +108,8 @@
             </div>
           </div>
           <p>
-            
-            I mastered C++ Data Structures and Algorithm.
+    Determination to find the solution to a problem is the elixir of my problem-solving attitude. With the continuous upgrading of Technology, many opportunities are emerging and I would like to experience each of them with 100% focus and perseverance.
+    To work on different things I have experience in different programming languages. I continuously try to get better output every day by learning from the past and implementing the learning in present.
           </p>
         </div>
       </div>
@@ -404,7 +404,7 @@
           <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
             <h4>Ritik Verma</h4>
-            <p><em>3rd year undergraduate from Dronacharya College of Engineering.</em></p>
+            <p><em>Computer Science student with good understanding of OOPS,Data Structures and Algorithms.And good experience in developing web-app based solutions. </em></p>
             <p>
             <ul>
               <li>New Delhi,India</li>
