--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h1><a href="index.html">Ritik Verma</a></h1>
     <!-- Uncomment below if you prefer to use an image logo -->
     <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-    <h2>I'm a Hardworking <span>Student</span> from India</h2>
+   <h2>I'm a<span>Developer</span> </h2>
 
     <nav id="navbar" class="navbar">
       <ul>
