--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h1><a href="index.html">Ritik Verma</a></h1>
     <!-- Uncomment below if you prefer to use an image logo -->
     <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-   <h2>I'm a<span>Developer</span> </h2>
+   <h2>I am  a<span>Developer</span> </h2>
 
     <nav id="navbar" class="navbar">
       <ul>
@@ -85,14 +85,14 @@
           <img src="assets/img/ritik_crop.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Iam a Developer</h3>
+          <h3>I am a Developer</h3>
           <p class="fst-italic">
-            Iam Ritik Verma undergraduate student of Dronacharya College of Engineering. Pursuing Bachelor's of Technology in Computer science. 
+            I am Ritik Verma undergraduate student of Dronacharya College of Engineering. Pursuing Bachelor's of Technology in Computer science. 
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>30 September 2000</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>DOB:</strong> <span>30 October 2000</span></li>
               <!--  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>-->
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9910739661</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New Delhi, INDIA</span></li>
